--- a/TourWebApp/Views/Home/Index.cshtml
+++ b/TourWebApp/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
 <div class="hero-text container reveal">
     <h1>Khám phá Miền Nam</h1>
     <p>Những hành trình đáng nhớ cùng HappyTrip – Tour du lịch uy tín, giá tốt.</p>
-    <a href="/Tour" class="btn btn-cta">Xem Tour Ngay</a>
+    <a href="/Tour/TatCa" class="btn btn-cta">Xem Tour Ngay</a>
 </div>
 
 <!-- GIỚI THIỆU + ĐIỂM ĐẾN -->
