--- a/TourWebApp/Views/Shared/_LayoutAdmin.cshtml
+++ b/TourWebApp/Views/Shared/_LayoutAdmin.cshtml
@@ -39,7 +39,11 @@
             <li><a href="/QuanLyBinhLuan/Index">
                 <i class="fa-solid fa-comments me-2"></i> Bình luận bài viết
             </a></li>
-
+            <li>
+                <a href="/AdminLoaiTour/Index">
+                    <i class="fa-solid fa-tags me-2"></i> Loại tour
+                </a>
+            </li>
             <li><a href="/QuanTri/QuanLyTour"><i class="fa-solid fa-map-location-dot me-2"></i> Quản lý tour</a></li>
             <li>
                 <a href="/QuanTri/DanhSachLich">
